--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>JustChatting</title>
   </head>
-  <body>
+  <body class="dark">
     <noscript>
       <strong
         >We're sorry but JustChatting doesn't work properly without JavaScript
