--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,6 +15,7 @@
       >
     </noscript>
     <div id="app"></div>
+    <div id="modal"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
